# air-accidents-data

./: README.md  last_updated.json
.github/workflows/: weekly-refresh.yml
scraper/: .gitignore  LICENSE  README.md  pyproject.toml
scraper/src/aircraft_tracker/: __init__.py  cli.py  exporter.py  models.py  scraper.py
scripts/: refresh_dataset.py
